--- a/Xcelerate.Common/Xcelerate.Common.csproj
+++ b/Xcelerate.Common/Xcelerate.Common.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Xcelerate.Infrastructure\Xcelerate.Infrastructure.csproj" />
   </ItemGroup>
 
