--- a/Xcelerate.Tests/Xcelerate.Tests.csproj
+++ b/Xcelerate.Tests/Xcelerate.Tests.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Xcelerate.Core\Xcelerate.Core.csproj" />
     <ProjectReference Include="..\Xcelerate.Infrastructure\Xcelerate.Infrastructure.csproj" />
   </ItemGroup>
