Added AccessoryViewModelComparer.cs and unit tested news admin service.

--- a/Xcelerate.Tests/Xcelerate.Tests.csproj
+++ b/Xcelerate.Tests/Xcelerate.Tests.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Xcelerate.Core\Xcelerate.Core.csproj" />
     <ProjectReference Include="..\Xcelerate.Infrastructure\Xcelerate.Infrastructure.csproj" />
+    <ProjectReference Include="..\Xcelerate\Xcelerate.csproj" />
   </ItemGroup>
 
   <ItemGroup>
