Fixed minor issues with car deletion and filtering

--- a/Xcelerate/appsettings.json
+++ b/Xcelerate/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Xcelerate;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Server=.;Database=Xcelerate;User Id=xceleratewebsite;Password=1234;Integrated Security=False;MultipleActiveResultSets=true;"
   },
   "Logging": {
     "LogLevel": {
