Added Recaptcha to register page.

--- a/Xcelerate/appsettings.json
+++ b/Xcelerate/appsettings.json
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RecaptchaSettings": {
+    "SiteKey": "6LeX38YpAAAAAPulUZ6gvMbL9bd5XbWNYopKjZca",
+    "SecretKey": "6LeX38YpAAAAAATcC_T1Z6EA6XK7gDZ25dhZRB9z"
+  }
 }
