--- a/Xcelerate.Tests/Xcelerate.Tests.csproj
+++ b/Xcelerate.Tests/Xcelerate.Tests.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="3.2.0" />
+    <PackageReference Include="Griesoft.AspNetCore.ReCaptcha" Version="2.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
     <PackageReference Include="NUnit" Version="3.13.3" />
