--- a/Xcelerate/appsettings.json
+++ b/Xcelerate/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "RecaptchaSettings": {
-    "SiteKey": "6LeX38YpAAAAAPulUZ6gvMbL9bd5XbWNYopKjZca",
-    "SecretKey": "6LeX38YpAAAAAATcC_T1Z6EA6XK7gDZ25dhZRB9z"
+    "SiteKey": "secret ooh",
+    "SecretKey": "secret yee"
   }
 }
