Added chat for users (changing the buy functionality) (NOT WORKING AT THE MOMENT!)

--- a/Xcelerate/Xcelerate.csproj
+++ b/Xcelerate/Xcelerate.csproj
@@ -23,6 +23,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Folder Include="Views\Chat\" />
 		<Folder Include="wwwroot\Images\Ad\" />
 		<Folder Include="wwwroot\js\About\" />
 	</ItemGroup>
