--- a/Xcelerate/appsettings.json
+++ b/Xcelerate/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "RecaptchaSettings": {
-    "SiteKey": "secret ooh",
-    "SecretKey": "secret yee"
+    "SiteKey": "6Lez2sYpAAAAAJw60RjdWc1IFIIXKnjWupajfRgD",
+    "SecretKey": "6Lez2sYpAAAAAHsC6AhhNaQnyT1t94VG6gADTk6C"
   }
 }
